@@ -55,6 +55,7 @@ sub exclude_file {
   return 1 if $file->name =~ /\A(?:Build|Makefile)\z/;
   return 1 if $file->name =~ /\Ablib/;
   return 1 if $file->name =~ /\.(?:o|bs)$/;
+  return 1 if $file->name =~ /\A_Inline/;
   return 1 if $file->name eq 'MYMETA.yml';
   return 1 if $file->name eq 'pm_to_blib';
 
